istio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - jaeger-istio.k8s.kuops.com
    - prometheus-istio.k8s.kuops.com
    - grafana-istio.k8s.kuops.com
    secretName: istio-tls-certs
  rules:
  - host: jaeger-istio.k8s.kuops.com
    http:
      paths:
      - backend:
          serviceName: jaeger-query
          servicePort: 16686
  - host: prometheus-istio.k8s.kuops.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  - host: grafana-istio.k8s.kuops.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: servicegraph-istio.k8s.kuops.com
    http:
      paths:
      - backend:
          serviceName: servicegraph
          servicePort: 8088
  - host: zipkin-istio.k8s.kuops.com
    http:
      paths:
      - backend:
          serviceName: zipkin
          servicePort: 9411
